# baseconvert

./: Alphabet.h  BaseConvert.cpp  BaseConvert.h  CMakeLists.txt  Exceptions.h  main.cpp  shell.nix  tests.cpp
src/: Alphabet.h  BaseConvert.h  Exceptions.h  Util.h  main.cpp  tests.cpp  util.h
